--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: CaoXiaoqing
-email: CaoXiaoqing2008@gmail.com/CaoXiaoqing2008@163.com
+email: CaoXiaoqing2008@gmail/163.com
 description: CXQ的博客 生活爱好者
 # > # this means to ignore newlines until "baseurl:"
 #   Write an awesome description for your new site here. You can edit this
@@ -21,3 +21,5 @@ markdown: kramdown
 # highlighter: pygments
 # highlighter: rouge
 # highlighter: false
+
+auto: true
