--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: CaoXiaoqing's Blog
 email: CaoXiaoqing2008@gmail/163.com
-description: CXQ的博客 生活爱好者
+description: 曹孝卿的博客 生活爱好者
 # > # this means to ignore newlines until "baseurl:"
 #   Write an awesome description for your new site here. You can edit this
 #   line in _config.yml. It will appear in your document head meta (for
