--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ zhihu_username:
 linkedIn_username: 
 dribbble_username:
 
-description_footer: 曹孝卿的博客
+description_footer: 曹孝卿的博客，部分文章从互联网收集整理，如有侵权请联系我修改
 
 # comments
 # two ways to comment, only choose one, and use your own short name
